# EvalAgent

./: .gitignore  EXPERIMENT_PERSONA_MODEL_RUNNER.md  calculate_stats.py  exp_01_book_shoes_online_20260316_054912_4c3823f0-4920-4589-89e8-f48e5fdafb15.json  exp_01_book_shoes_online_20260316_054912_78b8eb8c-2643-44a2-a04c-05b99f1aca0b.json  exp_01_book_shoes_online_20260316_072152_8266c835-bb7f-48ad-bca1-816c42eb6527.json  flight_luxury.json  get_p_values.py  package-lock.json  run_persona_model_experiment.py  run_persona_model_experiment_old.py  split_dataset_groups.py  test_gpt5_key.py
backend/: .dockerignore  .gitignore  AI_Judge_Framework.md  CLOUD_OPERATIONS.md  DEPLOY.md  Dockerfile  LLM_AS_JUDGE_PROCESSING_LOGIC_DETAILED.md  README.md  deploy.ps1  deploy_mac.sh  precompute_screenshot_hashes.py  pyproject.toml  requirements.txt  test_api_keys.py
backend/app/: main.py
backend/app/api/: browser_agent.py  configuration.py  criteria.py  deps.py  health.py  history_logs.py  judge.py  maintenance.py  routes.py  sample.py
backend/app/core/: config.py  normalizers.py  storage_paths.py
backend/app/schemas/: browser_agent.py  criteria.py  echo.py  history_logs.py  judge.py  persona.py  persona_variation.py
backend/app/services/: browser_agent_runner.py  criteria_generator.py  evaluation_prompts.py  llm_factory.py  (+8 more)
backend/history_logs_cache/: buy_milk_Cost_Savings_20251103_060520_run01.json  buy_milk_Cost_Savings_20251103_061316_run01.json
backend/tests/: test_judge_prompt_alignment.py
backend/value_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1048 files in other folders)
